# Mr.Agent

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: data.ts  main.ts  styles.css
scripts/: thinkingroot_sdk_bridge.mjs
src/: agent_runner.rs  cli_intake.rs  config.rs  intake.rs  lib.rs  main.rs  openai_responses.rs  session.rs  telegram.rs  terminal.rs  thinkingroot_boundary.rs  thinkingroot_http.rs  thinkingroot_sdk.rs  types.rs  web_intake.rs
tests/: telegram_intake.rs
